# OpenMesh

branches/OpenMesh-Python/src/Python/: Bindings.cc  Bindings.hh  CMakeLists.txt  Circulator.hh  Connectivity.hh  InputOutput.hh  Iterator.hh  Mesh.hh  PropertyManager.hh  Vector.hh  bindings.cc
tags/OpenMesh-2.0/: CMakeLists.txt  VERSION
tags/OpenMesh-2.0/Doc/: Doxyfile  history.docu  mesh.docu
tags/OpenMesh-2.0/Doc/Concepts/: MeshItems.hh  MeshKernel.hh
tags/OpenMesh-2.0/Doc/html/: acg_header.html
tags/OpenMesh-2.0/cmake/: FindGLUT.cmake  fixbundle.cmake.in
trunk/: ACGMakefile  CHANGELOG  CHANGES  CMakeLists.txt  Changes.txt  OpenMesh.pro  OpenMesh.sln  README  VERSION  VS2008OpenMesh.sln  release.howto
trunk/Apps/Decimating/: DecimaterViewerWidget.cc  DecimaterViewerWidget.hh  Decimating.pro  decimater.cc  decimaterviewer.cc
trunk/Apps/Decimating/DecimaterGui/: DecimaterGui.pro  DecimaterGui.vcproj  gui.pro  gui.vcproj
trunk/Apps/Decimating/commandline/: commandline.pro
trunk/Apps/Decimating/commandlineDecimater/: commandline.pro  commandlineDecimater.pro  commandlineDecimater.vcproj
trunk/Apps/Decimating/gui/: gui.pro
trunk/Apps/Deprecated/IvViewer/: SoOpenMeshNodeT.hh
trunk/Apps/QtViewer/: MeshViewerWidgetT.cc  QGLViewerWidget.cc  QtViewer.vcproj  meshviewer.cc
trunk/Apps/Smoothing/: Smoothing.vcproj
trunk/Apps/Subdivider/: MeshViewerWidget.cc  Subdivider.pro  adaptive_subdivider.cc  qtsubdivider.cc  subdivider.cc
trunk/Apps/Subdivider/SubdividerGui/: SubdividerGui.pro  SubdividerGui.vcproj  gui.pro  gui.vcproj
trunk/Apps/Subdivider/commandlineAdaptive/: commandlineAdaptive.pro
trunk/Apps/Subdivider/commandlineAdaptiveSubdivider/: commandlineAdaptive.vcproj  commandlineAdaptiveSubdivider.vcproj
trunk/Apps/Subdivider/commandlineSubdivider/: commandline.vcproj  commandlineSubdivider.pro  commandlineSubdivider.vcproj
trunk/Apps/Unsupported/IvViewer/: SoOpenMeshNodeT.cc  SoOpenMeshNodeT.hh  ivviewer.cc
trunk/Apps/Unsupported/OsgViewer/: meshviewer.cc  osgviewer.cc
trunk/Apps/Unsupported/ProgViewer/: ProgViewerWidget.cc  ProgViewerWidget.hh  progviewer.cc
trunk/Apps/VDProgMesh/Synthesizer/: VDPMSynthesizerViewerWidget.cc
trunk/Apps/commandlineDecimater/: commandline.vcproj
trunk/Apps/mconvert/: VS2008mconvert.vcproj  mconvert.vcproj
trunk/Core/: CMakeLists.txt  Core.pro  Core.vcproj  VS2008Core.vcproj
trunk/Core/Geometry/: Config.hh  QuadricT.hh  VectorT_inc.hh
trunk/Core/IO/: IOInstances.hh  OMFormatT.cc  SR_binary.hh  SR_rbo.hh
trunk/Core/IO/importer/: BaseImporter.hh  ImporterT.hh
trunk/Core/IO/reader/: BaseReader.hh  OBJReader.cc  OBJReader.hh  OMReader.cc  PLYReader.hh
trunk/Core/IO/writer/: BaseWriter.hh  OBJWriter.cc  OMWriter.hh  PLYWriter.hh
trunk/Core/Mesh/: ArrayItems.hh  Attributes.hh  BaseKernel.cc  BaseKernel.hh  FinalMeshItemsT.hh  PolyMeshT.cc  PolyMesh_ArrayKernelT.hh  Status.hh  TriConnectivity.cc  TriMeshT.cc  TriMeshT.hh  TriMesh_ArrayKernelT.hh
trunk/Core/Utils/: Noncopyable.hh  color_cast.hh  vector_traits.hh
trunk/Doc/: CMakeLists.txt  Doxyfile  changelog.docu  doxy.config.in  history.docu  mainpage.docu  mesh.docu  misc.docu  navigation.docu  operations.docu  subdivider.docu  tutorial_01.docu  tutorial_05.docu  tutorial_07.docu  tutorial_07b.docu  tutorial_main.docu
trunk/Doc/Concepts/: MeshItems.hh  MeshKernel.hh
trunk/Doc/Examples/: decimater.cc  iterators.cc  nav_code4.cc  python_tutorial.py
trunk/Doc/Tutorial/01-build_cube/: build_cube.cc
trunk/Doc/Tutorial/07-traits/: smooth.cc
trunk/Doc/Tutorial/07b-delete_geometry/: delete_geometry.cc
trunk/Doc/Tutorial/09-persistence/: fill_props.hh
trunk/Doc/html/: acg_tabs.css
trunk/LICENSE/: LICENSEHEADER
trunk/Tools/: CMakeLists.txt  OpenMesh_Tools.vcproj  Tools.pro  Tools.vcproj  VS2008Tools.vcproj
trunk/Tools/Decimater/: CollapseInfoT.hh  DecimaterT.hh  ModBaseT.hh  ModProgMeshT.cc  ModProgMeshT.hh  ModQuadricT.cc  ModQuadricT.hh
trunk/Tools/Smoother/: LaplaceSmootherT.hh  SmootherT.cc  SmootherT.hh
trunk/Tools/Subdivider/Uniform/: CompositeLoopT.hh  LoopT.hh  Sqrt3T.hh
trunk/Tools/Utils/: Config.hh  MeshCheckerT.cc  StripifierT.cc  StripifierT.hh  getopt.c
trunk/Tools/VDPM/: VHierarchyNodeIndex.cc
trunk/cmake/: ACGCommon.cmake  ACGCompiler.cmake  ACGOutput.cmake  FindGoogleTest.cmake  FindOpenMesh.cmake  OpenMeshPackage.cmake  OpenMeshpackage.cmake  fixbundle.cmake.in  fixbundle.cmake.win.in  package.cmake
trunk/debian/: changelog  control  copyright  rules
trunk/qmake/: all.include
trunk/src/OpenMesh/Apps/: CMakeLists.txt
trunk/src/OpenMesh/Core/: CMakeLists.txt  Core.pro  VS2008Core.vcproj
trunk/src/OpenMesh/Examples/: Makefile
trunk/src/Python/: CMakeLists.txt
trunk/src/Unittests/: CMakeLists.txt  fill_props.hh  int2roman.hh  unittests.cc  unittests_add_face.cc  unittests_add_face.hh  unittests_decimater.cc  unittests_decimater.hh  unittests_delete_face.hh  unittests_loading.hh  unittests_mc_decimater.hh  unittests_mesh_dual.hh  unittests_mixed_decimater.hh  unittests_property.hh  unittests_randomNumberGenerator.hh  unittests_read_write_OBJ.cc  unittests_read_write_OBJ.hh  unittests_read_write_OFF.hh  unittests_read_write_OM.hh  unittests_read_write_PLY.hh  unittests_read_write_STL.cc  unittests_read_write_STL.hh  unittests_split_copy.hh  unittests_stripifier.hh  unittests_subdivider.hh  unittests_trimesh_circulator_current_halfedge_handle_replacement.cc  unittests_trimesh_circulator_current_halfedge_handle_replacement.hh  unittests_trimesh_circulator_face_edge.hh  unittests_trimesh_circulator_face_face.hh  unittests_trimesh_circulator_face_halfedge.hh  unittests_trimesh_circulator_face_vertex.hh  unittests_trimesh_circulator_vertex_edge.hh  unittests_trimesh_circulator_vertex_face.hh  unittests_trimesh_circulator_vertex_ihalfedge.hh  unittests_trimesh_circulator_vertex_ohalfedge.hh  unittests_trimesh_circulator_vertex_vertex.hh  unittests_trimesh_circulators.hh  unittests_trimesh_collapse.hh  unittests_trimesh_garbage_collection.hh  unittests_trimesh_iterators.hh  (+6 more)
trunk/templates/: cpp
(+1596 files in other folders)
